--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 body {
     margin: 35px auto;
-    background-image: url(./91OTtJUf1JL._AC_SL1500_.jpg);
+    background-color: #946B2D;
+    /* background-image: url(./images/219-2196975_harry-potter-book-clip-art.png); */
+    /* background-size: contain;
+    background-repeat: repeat;
+    background-size: 100px 100px; */
     /* border: 2px solid red; */
 }
 
 .main-game {
-    background-color: gray;
+    border: 5px solid black;
+    border-radius: 5%;
+    background-color: black;
+    /* background-color: #070B34; */
     margin: auto;
     max-width: 800px;
 }
 
 .main-title {
-    text-shadow: 5px 5px #AAAAAA;
+    color: #C0C0C0;
+    text-shadow: 3px 3px #5a5a5a;
     font-size: 35px;
     text-align: center;
     /* border: 2px solid red; */
@@ -32,6 +40,7 @@ h1 {
 }
 
 .score-div {
+    /* font-family: 'Indie Flower', cursive; */
     margin: 5px;
     text-align: center;
     border: 3px solid lightgrey;
@@ -57,8 +66,15 @@ h1 {
 }
 
 .question-container {
-    text-align: center;
-    border: 2px solid red;
+    font-family: 'Indie Flower', cursive;
+    /* background-color: #2B2F77; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    height: 100px;
+    font-size: 20px;
+    /* border: 2px solid red; */
 }
 
 .answers-container {
@@ -68,52 +84,83 @@ h1 {
 }
 
 .option {
+    font-family: 'Indie Flower', cursive;
     height: 70px;
     font-size: 30px;
     margin: 15px;
+    border-radius: 25%;
+    color: white;
 }
+
 
 .option1 {
     background-color: #AE0001;
     border: 5px solid #D3A625;
-    border-radius: 25%;
+}
+
+.option1:hover {
+    background-color: #d90000;
+    box-shadow: 3px 3px #f7c437;
+    font-weight: bold;
 }
 
 .option2 {
     background-color: #2A623D;
     border: 5px solid #AAAAAA;
-    border-radius: 25%;
+}
+
+.option2:hover {
+    background-color: #3d8956;
+    box-shadow: 3px 3px #c8c6c6;
+    font-weight: bold;
 }
 
 .option3 {
-    color: darkgray;
+    color: white;
     background-color: #222F5B;
     border: 5px solid #5D5D5D;
-    border-radius: 25%;
+}
+
+.option3:hover {
+    background-color: #384c91;
+    box-shadow: 3px 3px #908f8f;
+    font-weight: bold;
 }
 
 .option4 {
+    color:black;
     background-color: #FFDB00;
-    border: 5px solid ##000000;
-    border-radius: 25%;
+    border: 5px solid #60605C;
+}
+
+.option4:hover {
+    background-color: #fade26e4;
+    box-shadow: 3px 3px #6d6c6c;
+    font-weight: bold;
 }
 
 .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
     height: 60px;
     text-align: center;
     /* border: 2px solid red; */
 }
 
+
 .submit, .next {
+    background-color: black;
+    color: white;
     font-size: 20px;
     text-align: center;
     height: 40px;
     width: 85px;
+    border: solid white;
+    border-radius: 20%;
 }
 
-/* .next {
-    font-size: 20px;
-    text-align: center;
-    height: 40px;
-    width: 85px;
-} */
+.submit:hover, .next:hover {
+    background-color: gray;
+}
+
