--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    /* border: 2px solid red; */
 }
 
 h1 {
@@ -46,6 +47,7 @@ h1 {
     margin: 5px;
     text-align: center;
     border: 3px solid lightgrey;
+    /* border: 3px solid red; */
     border-radius: 10%;
     padding-left: 15px;
     padding-right: 15px;
@@ -70,12 +72,13 @@ h1 {
 .question-container {
     font-family: 'Indie Flower', cursive;
     /* background-color: #2B2F77; */
+    margin: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     height: 100px;
-    font-size: 20px;
+    font-size: 25px;
     /* border: 2px solid red; */
 }
 
@@ -166,7 +169,7 @@ h2 {
     border-radius: 20%;
 }
 
-.submit:hover, .next:hover {
+.next:hover {
     background-color: gray;
 }
 
@@ -174,7 +177,7 @@ h2 {
     display: none;
 }
 
-#final {
+#result {
     margin: 0;
     text-align: center;
     font-size: 30px;
@@ -182,3 +185,16 @@ h2 {
     height: 50px;
     /* border: 2px solid red; */
 }
+
+.final-message{
+    color: white;
+    font-size: 25px;
+    font-family: 'IM Fell English SC', serif;
+    /* border: 2px solid red; */
+} 
+
+.welcome-message{
+    color:white;
+    border: 2px solid red;
+}
+
