--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 body {
     margin: 35px auto;
-    background-color: #946B2D;
-    /* background-image: url(./images/219-2196975_harry-potter-book-clip-art.png); */
-    /* background-size: contain;
-    background-repeat: repeat;
-    background-size: 100px 100px; */
+    background-color: #9b0101;
     /* border: 2px solid red; */
 }
 
@@ -13,8 +9,8 @@ body {
     border: 5px solid black;
     border-radius: 5%;
     background-color: black;
-    border: 2px solid white;
-    /* background-color: #070B34; */
+    border: 10px solid #D3A625;
+    box-shadow: 3px 3px 20px 20px #a27f1d;
     margin: auto;
     max-width: 800px;
 }
@@ -43,7 +39,6 @@ h1 {
 }
 
 .score-div {
-    /* font-family: 'Indie Flower', cursive; */
     margin: 5px;
     text-align: center;
     border: 3px solid lightgrey;
@@ -71,7 +66,6 @@ h1 {
 
 .question-container {
     font-family: 'Indie Flower', cursive;
-    /* background-color: #2B2F77; */
     margin: 15px;
     display: flex;
     justify-content: center;
@@ -193,8 +187,51 @@ h2 {
     /* border: 2px solid red; */
 } 
 
+.start-page{
+    height: 750px; 
+    /* border: 2px solid blue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-self: center;
+}
 .welcome-message{
+    display: flex;
+    align-self: center;
+    text-align: center;
     color:white;
-    border: 2px solid red;
+    font-family: 'Harry Potter', sans-serif; 
+    font-size: 40px;
+    /* border: 2px solid red; */
 }
 
+.image{
+    display: flex;
+    align-self: center;
+    /* border: 2px solid red; */
+}
+.harry-glasses{
+    /* border: 2px solid red; */
+}
+
+.start{
+    width: 150px;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    background-color: #D3A625;
+    border-radius: 40%;
+    color: black;
+    font-size: 35px;
+    /* border: 2px solid red; */
+}
+
+.start:hover{
+    border: 10px solid #D3A625;
+    box-shadow: 3px 3px 10px 10px #a27f1d;
+}
+
+.start-btn{
+    margin: 5px;
+    text-align: center;
+}
