added screenshots of the game into readme file

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 /*=======================================================================
-Adding glwing effect to the border using css animation keyframe
+Adding glowing effect to the border using css animation keyframe
 - Link referencing how to use animation
     https://blog.stackfindover.com/css-glowing-effect/
 =======================================================================*/
